--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <div class="piano">
 
 <ul>
-<li><audio id="piano1"><source src="1.ogg" type="audio/ogg"><source src="1.mp3" type="audio/mpeg"></audio><button class="1" onclick="playNote('piano1')" type="button">A</button></li>
-<li><audio id="piano2"><source src="2.ogg" type="audio/ogg"><source src="2.mp3" type="audio/mpeg"></audio><button class="2" onclick="playNote('piano2')" type="button">S</button></li>
-<li><audio id="piano3"><source src="3.ogg" type="audio/ogg"><source src="3.mp3" type="audio/mpeg"></audio><button class="3" onclick="playNote('piano3')" type="button">D</button></li>
-<li><audio id="piano4"><source src="4.ogg" type="audio/ogg"><source src="4.mp3" type="audio/mpeg"></audio><button class="4" onclick="playNote('piano4')" type="button">F</button></li>
-<li><audio id="piano5"><source src="5.ogg" type="audio/ogg"><source src="5.mp3" type="audio/mpeg"></audio><button class="5" onclick="playNote('piano5')" type="button">G</button></li>
-<li><audio id="piano6"><source src="6.ogg" type="audio/ogg"><source src="6.mp3" type="audio/mpeg"></audio><button class="6" onclick="playNote('piano6')"type="button">H</button></li>
-<li><audio id="piano7"><source src="7.ogg" type="audio/ogg"><source src="7.mp3" type="audio/mpeg"></audio><button class="7" onclick="playNote('piano7')" type="button">J</button></li>
-<li><audio id="piano8"><source src="8.ogg" type="audio/ogg"><source src="8.mp3" type="audio/mpeg"></audio><button class="8" onclick="playNote('piano8')" type="button">K</button></li>
+<li><audio id="piano1"><source src="1.ogg" type="audio/ogg"><source src="1.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano1')" type="button">A</button></li>
+<li><audio id="piano2"><source src="2.ogg" type="audio/ogg"><source src="2.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano2')" type="button">S</button></li>
+<li><audio id="piano3"><source src="3.ogg" type="audio/ogg"><source src="3.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano3')" type="button">D</button></li>
+<li><audio id="piano4"><source src="4.ogg" type="audio/ogg"><source src="4.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano4')" type="button">F</button></li>
+<li><audio id="piano5"><source src="5.ogg" type="audio/ogg"><source src="5.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano5')" type="button">G</button></li>
+<li><audio id="piano6"><source src="6.ogg" type="audio/ogg"><source src="6.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano6')" type="button">H</button></li>
+<li><audio id="piano7"><source src="7.ogg" type="audio/ogg"><source src="7.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano7')" type="button">J</button></li>
+<li><audio id="piano8"><source src="8.ogg" type="audio/ogg"><source src="8.mp3" type="audio/mpeg"></audio><button  onclick="playNote('piano8')" type="button">K</button></li>
 </ul>
 
 </div>
